# PhESCAMI_geant4

./: .gitignore  README.md
analysis/: ADHD_gate.cc  README
analysis/Event_display/: NewEv_display.cc  test.cc
analysis/filtred_data/: ADHD_BKGrec.cc  ADHD_rec.cc
analysis/macros/: ADHD_BKGrec.cc  ADHD_doubleCapture.cc  ADHD_gateRange.cc  ADHD_gateRange_MCTruth.cc  APP_meeting.cc  Acceptance.cc  IFAE_Particle_preparation.cc  IFAE_plot.cc  IFAE_preparation.cc  comparison_debug.cc  single_contribution.cc  trig_eff.cc  trigger_plotter.cc
analysis/raw_data/: Ev_filter.cc
sources/: TO_BE_DONE_BEFORE_RUNNING.txt
sources/src/: CMakeLists.txt  GNUmakefile  History  Makefile  README  antimatter_effect.mac  ev16.mac  exampleADHD.cc  exampleADHD.in  gui.mac  init.mac  init_vis.mac  ionization_check_C12.mac  ionization_check_He4.mac  ionization_check_proton.mac  long_run_C12.mac  long_run_C12_GPS.mac  long_run_Dbar.mac  long_run_Dbar_GPS.mac  long_run_Dbar_GPS_stat.mac  long_run_Deuteron.mac  long_run_Deuteron_GPS.mac  long_run_He4.mac  long_run_He4_GPS.mac  long_run_electron_GPS.mac  long_run_pbar.mac  long_run_pbar_GPS.mac  long_run_pbar_GPS_stat.mac  long_run_proton.mac  long_run_proton_GPS.mac  vis.mac
sources/src/include/: ADHDActionInitialization.hh  ADHDDetectorConstruction.hh  ADHDEventAction.hh  ADHDHeGasHit.hh  ADHDHeGasSD.hh  ADHDHodoscopeHit.hh  ADHDHodoscopeSD.hh  ADHDPrimaryGeneratorAction.hh  ADHDRunAction.hh  MyDet.hh
sources/src/root_test/: EnergySpectra.cc
sources/src/src/: ADHDActionInitialization.cc  ADHDDetectorConstruction.cc  ADHDEventAction.cc  ADHDHeGasHit.cc  ADHDHeGasSD.cc  ADHDHodoscopeHit.cc  ADHDHodoscopeSD.cc  ADHDPrimaryGeneratorAction.cc  ADHDRunAction.cc
